k8s/rental-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rental-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rental-service
  template:
    metadata:
      labels:
        app: rental-service
    spec:
      containers:
        - image: ghcr.io/yoyo53/rental-service:latest
          imagePullPolicy: IfNotPresent
          name: rental-service
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rental-service
  name: rental-service
spec:
  ports:
    - nodePort: 30080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: rental-service
  type: LoadBalancer
