k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rental-service-ingress
  annotations:
spec:
  rules:
    - host: rental-service.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rental-service
                port:
                  number: 8080
    - host: rental-service-js.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rental-service-js
                port:
                  number: 3000
